# python-snippets

./: .gitignore  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pypi-publish.yml  python-publish.yml
data/: sample.jsonl  sample.xlsx
snippets/: __init__.py  decorators.py  eval.py  evaluate.py  logs.py  mixin.py  perf.py  utils.py
src/snippets/: __init__.py  decorators.py  evaluate.py  mixin.py  perf.py  utils.py
tests/: __init__.py  test_decorators.py  test_utils.py
